added 7dos.org js files

--- a/components/sass/_base.scss
+++ b/components/sass/_base.scss
@@ -2,3 +2,7 @@
 // ===============
 
 // body, page, content, container, headings... estilos generales
+
+body {
+    background-color: $lightGreen;
+}
