--- a/builds/development/css/style.css
+++ b/builds/development/css/style.css
@@ -1,2 +1,5 @@
 @import "http://fonts.googleapis.com/css?family=Open+Sans:400,800";
 @import "http://fonts.googleapis.com/css?family=Merriweather:400,700";
+body {
+  background-color: #1ECF00;
+}
